# mcp-ghost

./: .gitignore  CLAUDE.md  Makefile  README.md  REQUIREMENTS.md  TESTING.md  pyproject.toml  pytest.ini  run_core_tests.py  run_tests.py  setup_repo.sh
examples/: basic_usage.py  multi_provider.py  server_config.json
src/mcp_ghost/: core.py
src/mcp_ghost/providers/: anthropic_client.py  openai_client.py  openai_style_mixin.py
src/mcp_ghost/tools/: adapter.py  formatter.py  models.py
src/mcp_ghost/utils/: prompt_generator.py
tests/: README.md  conftest.py  golden_viewer.py  test_core.py  test_e2e_crud.py  test_golden_e2e_crud.py
tests/providers/: __init__.py  test_anthropic_client.py  test_base.py  test_client_factory.py  test_openai_client.py
tests/tools/: __init__.py  test_adapter.py  test_formatter.py  test_models.py
